--- a/hi.html
+++ b/hi.html
@@ -5,6 +5,6 @@
     <title>My web page</title>
 </head>
 <body>
-      Hi world,  Hello world. HEllo ello
+      Hi world,  Hello world. HEllo Hello
 </body>
 </html>
